--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
     margin-bottom: 20px;
 }
 /* Efeito Parallax */
-.caixa1, .caixa2, .caixa3, .caixa4, .caixa5, .caixa6 {
+.caixa1, .caixa2, .caixa3, .caixa4, .caixa5, .caixa6, .caixa7 {
     position: relative; /* para usar a position absolute dentro das caixas, é
     necessário que elas estejam em position relative */
     height: 100%;
