--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ p {
 .caixa7 {
     background-image: url(/ProjetoTraveller/imagens/cuca.jpeg);
 }
+.caixa8 {
+    background-image: url(/ProjetoTraveller/imagens/tutu_maramba.jpeg);
+}
 .conteudo-titulo {
     position: absolute;
     top: 45%;
