--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,10 @@ p {
     letter-spacing: 5px;
     text-transform: uppercase;
 }
+a {
+    text-decoration: none;
+    color: rgb(78, 75, 75);
+}
+a:hover {
+    color: #ccc;
+}
